# RocchiProgettoTimer

./: Application.cpp  Application.h  CMakeLists.txt  Clock.cpp  Clock.h  ClockModel.cpp  ClockModel.h  ClockTests.cpp  Mframe.cpp  Mframe.h  README.md  RunAllTests.cpp  Stopwatch.cpp  Stopwatch.h  StopwatchModel.cpp  StopwatchModel.h  Timer.cpp  Timer.h  TimerModel.cpp  TimerModel.h  TimerTest.cpp  main.cpp
Test/: CMakeLists.txt  ClockTest.cpp  ClockTests.cpp  StopwatchTest.cpp  TimerTest.cpp
Test/lib/googletest-master/: ReadMe.txt
